# sortphotos

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TODO.md  exiftool.py  pyproject.toml  setup.py  sortphotos.py
exiftool-10.82/: source.txt
osx/: com.andrewning.sortphotos.plist  setup.py
scripts/: sortphotos.sh
sortphotos/: __main__.py  sortphotos.py
src/: com.sortphotos.file_watcher.plist  exif.py  exiftool.py  file_watcher.py  sort_filter.py  sortphotos.py
src/Image-ExifTool/: META.yml  exiftool
src/Image-ExifTool/html/: index.html
src/exifread/: __init__.py  classes.py  utils.py
src/exifread/tags/: __init__.py  exif.py  makernote.py  makernote_canon.py
src/tools/: fswatch
src/tools/terminal-notifier.app/Contents/: Info.plist
src/tools/terminal-notifier.app/Contents/MacOS/: terminal-notifier
src/tools/terminal-notifier.app/Contents/Resources/: Terminal.icns
tests/: test_sortphotos.py
