[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sortphotos"
version = "2.0.0"
description = "Organizes photos and videos into folders using date/time information"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Andrew Ning" },
]
dependencies = [
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
sortphotos = "src.sortphotos:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["Image-ExifTool/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
